# rttt

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  RTTT.hpp  RTTT_SDL.hpp  local.properties  main.cpp
SDL/android-project/app/: build.gradle
SDL/android-project/app/src/main/: AndroidManifest.xml
SDL/android-project/app/src/main/assets/: default.rcss  menu.rml  new_game.rml  settings.rml
SDL/android-project/app/src/main/assets/RmlAssets/: default.rcss  menu.rml  new_game.rml
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/src/: CMakeLists.txt  RTTT.cpp  RTTT_CLI.cpp  RTTT_CLI.hpp  RTTT_SDL.cpp  RTTT_SDL.hpp  main.cpp
app/src/main/: AndroidManifest.xml
metadata/en-US/: full_description.txt  short_description.txt
metadata/en-US/changelogs/: 3.txt
metadata/ru/: full_description.txt  short_description.txt
metadata/ru/changelogs/: 1.txt  3.txt
src/: RTTT.hpp  RTTT_Engine.cpp  RTTT_Engine.hpp  main.cpp
src/RmlUi/: BackendData.cpp  BackendData.hpp  EventListener.cpp  EventListener.hpp  FileInterface.cpp  FileInterface.hpp  RmlUi_Backend_SDL_SDLrenderer.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_SDL.h  utils.hpp
src/resources/RmlAssets/: active_game.rml  settings.rml
